# prism

./: .clang-format  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.include  README.md  lgpl-v3.tmpl  push_new_docker_container.sh  pytest.ini  remove-later.txt  repo_sentence_count.json  requirements.txt  setup.cfg  setup.py  setup_coq.sh  setup_python.sh  venv_check.py
coqgym_interface/: Makefile  pyproject.toml  setup.cfg  setup.py
coqgym_interface/coqgym_interface/: __init__.py  coqgym.py  coqgym_base.py  dataset.py  definitions.py  extractors.py  project.py  unknowns.py  utils.py
coqgym_interface/test/: split_by_sentence_expected.json  split_by_sentence_test_file.v  test_coqgym_base.py  test_unknowns.py  test_utils.py  verify_sentence_split_correctness.py
dataset/: accepted_names.txt  agg_coq_repos.yml  default_commits.yml  opam_projects.txt  rejected_names.txt  skipped_names.txt  split.json  updated_metadata.yaml  updated_metadata.yml
docs/: ProjectMetadataSpecifications.md
metadata/: ProjectMetadataSpecifications.md
prism/data/: CoqDocument.py  DataMiner.py  Definition.py  LemmaBackendSexpTransformers.py  LemmaForeendSexpTransformers.py  Token.py  TreeTransformation.py  TreeTransformer.py  __init__.py  build_cache.py  cache.py  commit_map.py  commit_processor.py  coqgym.py  dataset.py  document.py  extract_cache.py  extractors.py  ident.py  project.py  sentence.py  setup.py  util.py  vernac_sentence.py
prism/data/cache/: __init__.py  command_extractor.py  extractor.py  server.py  types.py
prism/data/coqgym/: __init__.py  dataset.py
prism/data/extraction/: build_cache.py  extract_cache.py
prism/data/lemma/: Lemma.py  LemmaBackendSexpTransformers.py  LemmaForeendSexpTransformers.py  __init__.py
prism/data/repair/: __init__.py  align.py  diff.py  instance.py  mining.py
prism/data/tests/: __init__.py  test_build_cache.py  test_cache.py  test_commit_map.py  test_dataset.py  test_extract_cache.py  test_repair.py
prism/data/transform/: TreeTransformation.py  TreeTransformer.py  __init__.py
prism/interface/coq/: __init__.py  environ.py  exception.py  goals.py  ident.py  iqr.py  names.py  options.py  re_patterns.py  serapi.py  unicode.py  unicode_table.py  util.py
prism/language/: __init__.py  id.py  token.py  types.py
prism/language/gallina/: __init__.py  analyze.py  exception.py  parser.py  util.py
prism/language/heuristic/: __init__.py  assertion.py  parser.py  str_with_location.py  util.py
prism/language/ltac/: __init__.py
prism/language/sexp/: IllegalSexpOperationException.py  __init__.py  _parse.cpp  exception.py  list.py  node.py  parser.py  string.py
prism/parser/: types.py
prism/parser/gallina/: CoqParser.py  ParserUtils.py  SexpAnalyzer.py  __init__.py  analyze.py  parser.py
prism/parser/sexp/: SexpList.py  SexpNode.py  SexpParser.py  SexpString.py  __init__.py  list.py  node.py  parser.py  string.py
prism/project/: __init__.py  base.py  dir.py  download.py  exception.py  iqr.py  metadata.py  repo.py  setup.py  strace.py  util.py
prism/project/graph/: __init__.py  graph.py  node.py  util.py
prism/project/metadata/: .gitignore  __init__.py  dataclass.py  storage.py  version_info.py
prism/project/tests/: __init__.py  projects.yml  projects_incomplete.yml  test.yml  test_dir.py  test_metadata.py  test_project.py  test_repo.py
prism/tests/: __init__.py  factories.py  resource.py
prism/tests/coq_examples/: aborted.v  bug-396.v  bug_7900.v  comp_cert_storage.yml  coq_sep_logic.yml  delayed_proof.v  delayed_proof_save.v  fermat4_mwe.v  hard_to_parse.v  minimal_metadata.yml  nested.v  notations.v  program_mode.v  save.v  save_named_theorem.v  shadowing.v  simple.v  simple_extra_nonsense.v  simple_extra_nonsense_glommed_expected.json  solve_all_obligations.v  split_by_sentence_expected.json  subproofs.v  verdi_core_net_a.v  verdi_core_net_b.v
prism/tests/projects/: metadata.json  (+1 more)
prism/util/: __init__.py  abc_enum.py  alignment.py  bash.py  compare.py  copy.py  criteria.py  cyaml.py  debug.py  diff.py  env.py  exception.py  exceptions.py  identity.py  io.py  iterable.py  logging.py  manager.py  metadata.py  opam.py  parse.py  path.py  re.py  resource_limits.py  serialize.py  string.py  tempfile.py
repos/: actual_repos.txt  all_repos.txt  all_repos_sorted.txt  coqgym_repos.txt  juan.txt  max.txt  process_git_coq_search.py  process_repos_list.py  validate_repos.py
repos/scripts/: combine_repos.py  list_to_newlines.py  process_git_coq_search.py  process_repos_list.py  validate_repos.py
requirements/: dev.txt
scripts/: count.py
scripts/data/: analyze_cache.py  analyze_cache_df.ipynb  analyze_cache_errors.py  build_default_commits.py  build_error_list.csv  cache_error_list.csv  collect_errors.py  commits_to_use.json  count.py  extract_cache.py  extract_cache_profile.py  files_to_use.json  files_to_use_test_cache_errors.json  filter_repair_examples.py  fix_metadata.py  merge_repair_instance_dbs.py  mine_repair_instances.py  mine_repair_instances_default_config.json  misc_error_list.csv  monitor-caching.py  produce_config.py  project_caching.py  run_extract_cache.sh
scripts/examples/: repair_example.py
scripts/project/: cross-check.py  dependency.py  download.py  math-comp-updater.py  process_yamls.py  split.json  split.py
scripts/repos/: all_repos_sorted.txt  coqgym_repos.txt  juan.txt  other_repos.txt  wesley.txt
scripts/training/: README.md
stats/: proof_sentence_counts.json
(+142 files in other folders)
