[metadata]
name = coq-pearls
description = Tools for working with Coq projects and repair datasets.
# long_description = file: ../README.md
author = Radiance Technologies, Inc.
project_urls =
    Internal fork = https://rsngit.radiancetech.com/pearls/coq-pearls
    GitHub fork = https://github.com/a-gardner1/coq-pearls
license_file = LICENSE

[options]
include_package_data = True
zip_safe = False
packages = find_namespace:
python_requires = >=3.8, <3.10
install_requires =
    bidict
    GitPython
    leven
    networkx
    numpy
    pexpect
    psutil
    pytest
    pytest-cov
    pytest-dependency
    recordclass <= 0.18.0.1
    scipy
    setuptools_scm
    seutil >= 0.7.1
    strace-parser
    typing-inspect
    tqdm

[options.extras_require]
test =
    pytest-doctestplus
    pytest-subtests

[options.packages.find]
include = prism
