[metadata]
name = coq-pearls
description = Tools for working with Coq projects and repair datasets.
# long_description = file: ../README.md
author = Radiance Technologies, Inc.
project_urls =
    Internal fork = https://rsngit.radiancetech.com/pearls/coq-pearls
    GitHub fork = https://github.com/a-gardner1/coq-pearls
license_file = LICENSE

[options]
include_package_data = True
zip_safe = False
packages = find_namespace:
python_requires = >=3.9, <3.10
install_requires =
    bidict
    diff_match_patch
    GitPython
    leven
    networkx
    numba
    numpy
    pexpect
    psutil
    pytest
    pytest-cov
    pytest-dependency
    PyYAML
    recordclass <= 0.18.0.1
    scipy
    setuptools_scm
    seutil >= 0.7.1
    strace-parser
    tqdm
    typing-inspect

[options.extras_require]
test =
    pytest-dependency
    pytest-doctestplus
    pytest-subtests

[options.packages.find]
include = prism
