[metadata]
name = coqgym_interface
description = Utilities for interacting with CoqGym
# long_description = file: ../README.md
author = Radiance Technologies, Inc.
url = https://rsngit.radiancetech.com/pearls/prism
license = ../LICENSE

[options]
zip_safe = False
packages = find:
python_requires = >=3.9, <3.10
install_requires =
    GitPython
    pytest
    pytest-cov
    transformers
    pylatexenc
    # pycoq
    # radtorch @ git+ssh://rsngit.radiancetech.com/radpy/radtorch@master
    # radpytools @ git+ssh://rsngit.radiancetech.com/radpy/radpytools@master

[options.extras_require]
test =
    pytest-doctestplus
    pytest-subtests
